--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace "com.rncamerakit"
     compileSdkVersion 31
     defaultConfig {
         minSdkVersion 24
