--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -131,6 +131,10 @@ android {
         }
     }
 
+    buildFeatures {
+        buildConfig = true
+    }
+
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
