--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -5,4 +5,4 @@ include ':app'
 include ':rncamerakit'
 project(':rncamerakit').projectDir = new File(rootProject.projectDir, '../../android')
 
-includeBuild('../node_modules/react-native-gradle-plugin')
+includeBuild('../node_modules/@react-native/gradle-plugin')
