--- a/example/package.json
+++ b/example/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-native": "^0.72.4"
+    "react-native": "0.73.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/runtime": "^7.9.6",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "metro-react-native-babel-preset": "^0.76.0"
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/runtime": "^7.23.6",
+    "@react-native/babel-preset": "^0.73.18",
+    "@react-native/metro-config": "^0.73.2",
+    "@react-native/typescript-config": "^0.73.1",
+    "@types/metro-config": "^0.76.3",
+    "@types/react": "^18.2.45",
+    "typescript": "^5.3.3"
   }
 }
