--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,3 +16,34 @@ jobs:
         run: yarn bootstrap-linux
       - name: Lint
         run: yarn lint
+
+  ios:
+    name: iOS
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: brew bundle
+      - name: Run swiftlint
+        run: swiftlint lint --reporter checkstyle --output ios-lint-results.xml
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ios-lint-results
+          path: ios-lint-results.xml
+
+  report:
+    name: Report linter results
+    runs-on: ubuntu-latest
+    needs: [eslint, ios]
+
+    steps:
+      - name: Install modules
+        run: yarn
+      - name: Retrieve iOS reports
+        uses: actions/download-artifact@v3
+        with:
+          name: ios-lint-results
+      - name: Danger
+        run: yarn danger ci
