--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "rm -rf dist/",
     "test": "jest",
     "lint": "yarn eslint -c .eslintrc.js",
+    "check-ios": "scripts/check-ios.sh",
     "release": "yarn clean && yarn build && yarn publish --verbose",
     "release:beta": "yarn clean && yarn build && yarn publish --tag beta --verbose",
     "release:local": "yarn clean && yarn build && tmp=$(mktemp) && yarn pack --filename $tmp.tar.gz && open -R $tmp.tar.gz",
@@ -33,6 +34,8 @@
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
     "babel-jest": "22.4.1",
+    "danger": "^11.3.1",
+    "danger-plugin-lint-report": "^1.8.1",
     "eslint": "^7.11.0",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.0.1",
