--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -40,6 +40,8 @@ jobs:
     needs: [eslint, ios]
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Install modules
         run: yarn
       - name: Retrieve iOS reports
