--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,6 @@
 name: Linter
+run-name: 🩺 Code checks on ${{ github.event_name == 'pull_request' && 'PR' || '🌱' }} ${{ github.event_name == 'pull_request' && github.event.number || github.ref_name }}
+
 on:
   pull_request:
     types: [opened, reopened]
@@ -50,3 +52,5 @@ jobs:
           name: ios-lint-results
       - name: Danger
         run: yarn danger ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
