--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,9 +2,10 @@ name: Linter
 run-name: 🩺 Code checks on ${{ github.event_name == 'pull_request' && 'PR' || '🌱' }} ${{ github.event_name == 'pull_request' && github.event.number || github.ref_name }}
 
 on:
+  push:
   pull_request:
     types: [opened, reopened]
-  push:
+
 jobs:
   eslint:
     name: ESLint
@@ -29,8 +30,7 @@ jobs:
       - name: Install dependencies
         run: brew bundle
       - name: Run swiftlint
-        continue-on-error: true
-        run: swiftlint lint --reporter checkstyle --output ios-lint-results.xml
+        run: swiftlint lint --reporter checkstyle --output ios-lint-results.xml || true
       - uses: actions/upload-artifact@v3
         with:
           name: ios-lint-results
@@ -44,6 +44,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 20.x
       - name: Install modules
         run: yarn
       - name: Retrieve iOS reports
