--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -4,16 +4,13 @@ run-name: 🩺 Code checks on ${{ github.event_name == 'pull_request' && 'PR' ||
 on:
   pull_request:
     types: [opened, reopened]
+  push:
 
 jobs:
   eslint:
     name: ESLint
     runs-on: ubuntu-latest # using linux runner for speed
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install modules
@@ -33,31 +30,4 @@ jobs:
       - name: Install dependencies
         run: brew bundle
       - name: Run swiftlint
-        run: swiftlint lint --reporter checkstyle --output ios-lint-results.xml || true
-      - uses: actions/upload-artifact@v3
-        with:
-          name: ios-lint-results
-          path: ios-lint-results.xml
-
-  report:
-    name: Report linter results
-    runs-on: ubuntu-latest
-    needs: [eslint, ios]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 20.x
-      - name: Install modules
-        run: yarn
-      - name: Retrieve iOS reports
-        uses: actions/download-artifact@v3
-        with:
-          name: ios-lint-results
-      - name: Danger
-        run: yarn danger ci
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: swiftlint lint --reporter github-actions-logging
