--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -30,4 +30,6 @@ jobs:
       - name: Install dependencies
         run: brew bundle
       - name: Run swiftlint
-        run: swiftlint lint --reporter github-actions-logging
+        run: |
+          updatedFiles=$(git --no-pager diff --name-only FETCH_HEAD $(git merge-base FETCH_HEAD ${{ github.base_ref }}) -- '*.swift')
+          swiftlint --reporter github-actions-logging -- $updatedFiles
